<resources>
    <string name="app_name">Registration</string>
    <string name="title_activity_login_fragment">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="skip">skip login</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="not_a_user_sign_up">Not a User? | Sign up</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="hello">Hello text</string>
    <string name="no_apply">There is no workshop applied</string>
    <string name="coordinator">Coordinator</string>
    <string name="summary">Summary</string>
    <string name="details">details</string>


</resources>
